# gossip

./: .gitignore  README.md  pyproject.toml
src/gossip/: __init__.py  async_gossip.py  gossip.py  sync_gossip.py
src/gossip.egg-info/: PKG-INFO  SOURCES.txt
src/gossip/impl/: __init__.py  async_gossip.py  sync_gossip.py
tests/: async_consensus.py  consensus.py  sync_consensus.py  test.py
tests/configs/: consensus.toml
tests/gossip-copy/: __init__.py  async_consensus.py  async_gossip.py  gossip.py  sync_gossip.py
