[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "gossip"
version = "0.1.0"
description = "Gossip Protocol for Distributed Optimization."
authors = [
    {name = "Rui Huang", email = "R.Huang@lboro.ac.uk"}
]

[project.optional-dependencies]
test = [
    "matplotlib==3.7.4",
    "networkx==3.4.2",
    "toml==0.10.2",
]

[tool.setuptools.packages.find]
where = ["src"]
